# aenternis

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build  check  coi-serviceworker.js  index.html  package-lock.json  package.json  run  stryker.conf.json  tsconfig.build.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
.cargo/: mutants.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/aenternis-core/: Cargo.toml
crates/aenternis-core/benches/: tick.rs
crates/aenternis-core/examples/: metrics_probe.rs  phase_breakdown.rs  profile_tick.rs
crates/aenternis-core/src/: apportion.rs  cell.rs  coord.rs  genesis.rs  lib.rs  macros.rs  metrics.rs  parallel.rs  rng.rs  snapshot.rs  tick.rs  vm.rs
crates/aenternis-core/src/macros/: v1.aenm
crates/aenternis-core/src/world/: arena.rs  cells.rs  mod.rs  sparse.rs
crates/aenternis-core/tests/: apply_outflow_bit_parity.rs  cell.rs  coord.rs  dump_state_for_diff.rs  genesis.rs  possess.rs  proportional_clamp.rs  rng.rs  sparse_world.rs  tick_combined_clamped.rs  tick_combined_clamped_contracts.rs  tick_diffusion.rs  tick_dominance.rs  tick_gravity.rs  tick_isotropy.rs  tick_mutation.rs  tick_natural_rates.rs  tick_outflow.rs  tick_step.rs  vm_execute.rs  vm_opcode.rs
crates/aenternis-server/: Cargo.toml
crates/aenternis-server/benches/: snapshot_encode.rs
crates/aenternis-server/src/: args.rs  lib.rs  main.rs  protocol.rs  world_actor.rs  ws.rs
crates/aenternis-wasm/: Cargo.toml  README.md
crates/aenternis-wasm/.cargo/: config.toml
crates/aenternis-wasm/src/: lib.rs
crates/aenternis-wasm/tests/: world.rs
docs/: aenternis.md  genesis-plan.md  gravity-plan.md  mechanics.md  native-server.md  opcodes-plan.md  optimalizace-2026-05.md  plan.md  prototype-09-plan.md  prototypes.md  questions.md  vm.md
prototypes/01-diffusion/: README.md  index.html  main.js  styles.css
prototypes/02-memory/: README.md  index.html  main.js  styles.css
prototypes/03-vm/: README.md  index.html  main.js  styles.css
prototypes/04-ports/: README.md  index.html  main.js  styles.css
prototypes/05-pointers/: README.md  index.html  main.js
prototypes/06-cooperation/: README.md  index.html  main.js  styles.css
prototypes/07-perf-3d/: README.md  index.html  main.js  styles.css
prototypes/08-viewer-3d/: README.md  index.html  main.js  styles.css  worker.js
prototypes/09-sparse-world/: README.md  index.html  main.js  test-debug.js  test-equivalence.js  test-headless.js  toroid.js  world.js
prototypes/09b-sparse-world-3d/: README.md  dump-state.js  index.html  main.js  package-lock.json  styles.css  test-debug.js  test-equivalence.js  test-headless.js  toroid.js  world.js
prototypes/10-render-tuner/: README.md  index.html  main.ts  styles.css
prototypes/11-gravity/: README.md  index.html  main.js  styles.css
scripts/: _wasm-threaded-toolchain.sh  build-wasm.sh  check.sh  gen-tuner-snapshot.mjs  install-rust-sandbox.sh  server.sh  verify-threaded-wasm.sh
src/: asm.js  asm.ts  camera-fit.ts  color.ts  conservation.js  conservation.ts  disasm.ts  format.ts  heat.ts  host-select.ts  jitter.ts  native-client.ts  presets.ts  program-text.ts  protocol.ts  sim-defaults.ts  snapshot.ts  tracker.ts  worker-handler.ts  worker-state.ts
tests/: asm.test.js  asm.test.ts  camera-fit.test.ts  color.test.ts  conservation.test.js  conservation.test.ts  disasm.test.ts  format.test.ts  heat.test.ts  host-select.test.ts  jitter.test.ts  native-client.test.ts  opcode-parity.test.ts  presets.test.ts  program-text.test.ts  protocol.test.ts  sim-defaults.test.ts  snapshot.test.ts  tracker.test.ts  worker-handler.test.ts  worker-state.test.ts
tests/web/: main.smoke.test.ts  wasm-bundle.smoke.test.ts
web/: index.html  main.js  main.ts  native-client.ts  worker.js  worker.ts
