[package]
name = "aenternis-core"
description = "Aenternis simulation core: cells, world topology, VM, and tick physics."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "tick"
harness = false

[lints]
workspace = true
