[package]
name = "aenternis-core"
description = "Aenternis simulation core: cells, world topology, VM, and tick physics."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustc-hash = { workspace = true }

# Rayon is the data-parallelism runtime used by the per-tick phases
# (`compute_natural_rates`, `lay_out_pointers`, `collect_outflow`).
# On native targets it ships unconditionally. On `wasm32` it's optional
# and pulled in only when the `wasm-threads` feature is on — that path
# routes through `wasm-bindgen-rayon`, which needs COOP/COEP headers
# (or a `coi-serviceworker` shim) in the host page and a nightly Rust
# toolchain with `-Z build-std` for atomics-enabled `std`. See
# `docs/optimalizace-2026-05.md` for the full setup.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rayon = { workspace = true, optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]
# Default off. Enables multi-threaded WASM via `wasm-bindgen-rayon` +
# pthread-over-Web-Workers + SharedArrayBuffer. Required toolchain side
# is nightly + `rust-src` (see `scripts/build-wasm.sh`); host page must
# be `crossOriginIsolated` (COOP / COEP headers or a SW shim).
wasm-threads = ["dep:rayon", "dep:wasm-bindgen-rayon"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "tick"
harness = false

[lints]
workspace = true
