[package]
name = "aenternis-wasm"
description = "WebAssembly bindings for the Aenternis simulation core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

# `cdylib` is what wasm-pack consumes to produce the .wasm bundle.
# `rlib` is kept so `cargo test --workspace` can run host-target tests
# against the same wrapper code.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aenternis-core = { path = "../aenternis-core" }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Re-exported through the `wasm-threads` feature for JS to call
# `init_thread_pool` via `wasm-bindgen`. Inactive when the feature is
# off — single-threaded WASM bundle has no rayon footprint.
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]
# Forwards to `aenternis-core`'s `wasm-threads` feature, which pulls in
# rayon + the wasm-bindgen pthread bridge. See
# `docs/plan-wasm-zerocopy-threads.md` § 3B.
wasm-threads = ["aenternis-core/wasm-threads", "dep:wasm-bindgen-rayon"]

# wasm-pack runs `wasm-opt` after wasm-bindgen by default. The default
# invocation strips the shared-memory and atomics declarations from
# the binary because wasm-opt's WASM-MVP baseline doesn't include
# them — which silently turns a threaded build into a single-threaded
# one at runtime (`postMessage` then fails with `DataCloneError:
# #<Memory> could not be cloned` because non-shared memory isn't
# structured-cloneable). The explicit `--enable-*` flags below tell
# wasm-opt to preserve those features.
#
# Applies equally to the default single-threaded build — the flags
# are no-ops on a binary that doesn't use atomics, so we keep them
# unconditional rather than feature-gated.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-threads', '--enable-bulk-memory', '--enable-mutable-globals']

[lints]
workspace = true
