[package]
name = "aenternis-wasm"
description = "WebAssembly bindings for the Aenternis simulation core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

# `cdylib` is what wasm-pack consumes to produce the .wasm bundle.
# `rlib` is kept so `cargo test --workspace` can run host-target tests
# against the same wrapper code.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aenternis-core = { path = "../aenternis-core" }
wasm-bindgen = "0.2"
# Rust panics on `wasm32-unknown-unknown` abort via the `unreachable`
# instruction by default, with no diagnostic message — JS sees only
# `RuntimeError: unreachable`. This crate installs a panic hook that
# pipes the panic payload + Rust source location to `console.error`,
# turning every panic into something actually debuggable. Tiny crate
# (~few KB), no runtime cost unless a panic actually fires.
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Re-exported through the `wasm-threads` feature for JS to call
# `init_thread_pool` via `wasm-bindgen`. Inactive when the feature is
# off — single-threaded WASM bundle has no rayon footprint.
wasm-bindgen-rayon = { version = "1.2", optional = true }
# `js_sys::Uint32Array::view` backs the zero-copy snapshot path
# (`cells_snapshot_view` / `cell_inspect_view`). Pulled in only on the
# wasm32 target — on the host these methods don't compile.
js-sys = "0.3"
# Replacement allocator for the threaded WASM bundle. The default
# `dlmalloc` shipped by `wasm32-unknown-unknown` serializes every
# alloc/free through a single mutex on the threaded build and
# coalesces free chunks lazily; after a few thousand ticks with N
# rayon workers churning per-tick `Vec`s in `collect_outflow_into`
# / `apply_outflow` the heap fragments enough that a ~5 MB
# contiguous request fails even with 4 GiB of headroom. `talc`'s
# `WasmGrowAndClaim` source grows the linear memory via
# `memory.grow` on demand and uses a spinlock-wrapped allocator
# with better coalescing — fixes the deterministic 2200-tick OOM
# at E = 1 M reported 2026-05-16. Gated to `wasm-threads` because
# (a) only that build actually fragments under contention and
# (b) the `nightly` feature on `talc` matches the nightly
# toolchain `wasm-threads` already requires for `+atomics`.
# Default features (`lock_api`, `allocator`, `nightly_api`) are what
# we want: `lock_api` enables `talc::sync::TalcLock`, the others are
# free-form trait impls. The `nightly_api` opt-in is fine because the
# threaded build already pins nightly for `+atomics` / `-Z build-std`.
talc = { version = "4", optional = true }
spinning_top = { version = "0.3", optional = true }

[features]
# Forwards to `aenternis-core`'s `wasm-threads` feature, which pulls in
# rayon + the wasm-bindgen pthread bridge. See
# `docs/optimalizace-2026-05.md`.
wasm-threads = [
    "aenternis-core/wasm-threads",
    "dep:wasm-bindgen-rayon",
    "dep:talc",
    "dep:spinning_top",
]

# wasm-pack runs `wasm-opt` after wasm-bindgen by default. The default
# invocation strips the shared-memory and atomics declarations from
# the binary because wasm-opt's WASM-MVP baseline doesn't include
# them — which silently turns a threaded build into a single-threaded
# one at runtime (`postMessage` then fails with `DataCloneError:
# #<Memory> could not be cloned` because non-shared memory isn't
# structured-cloneable). The explicit `--enable-*` flags below tell
# wasm-opt to preserve those features.
#
# Applies equally to the default single-threaded build — the flags
# are no-ops on a binary that doesn't use atomics, so we keep them
# unconditional rather than feature-gated.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-threads', '--enable-bulk-memory', '--enable-mutable-globals']

[lints]
workspace = true
